--- a/style.css
+++ b/style.css
@@ -6,12 +6,32 @@
     font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
+    margin: 0;
+}
+
+.btn-primary {
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    background-color: #FF900E;
+    border: none;
+    margin-bottom: 32px;
+    margin-top: 32px;
+    width: 180px;
+    height: 64px;
+    border-radius: 10px;
+    cursor: pointer;
 }
 
 /* Header Style */
 header {
     background-color: #d0b9a0;
     padding: 50px 240px;
+}
+
+.nav-title {
+    margin-bottom: 30px;
 }
 
 nav {
@@ -58,4 +78,38 @@ ul>li>a {
     font-style: normal;
     font-weight: 400;
     color: #131313;
+}
+
+.banner img {
+    width: 100%;
+}
+
+/* responsive media quires */
+/* Mobile Devices */
+@media screen and (max-width:576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        flex-direction: column;
+
+    }
+
+}
+
+/* Tablet or medium devices */
+@media screen and (min-width:576px) and (max-width:960px) {
+
+
+    nav {
+        flex-direction: column;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    header {
+        padding: 20px;
+
+    }
 }
